--- a/zadatak-prototyp/src/index.css
+++ b/zadatak-prototyp/src/index.css
@@ -449,3 +449,49 @@ select{
   margin-right: auto;
   background-color: transparent;
 }
+
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 310px;
+  height: 50px;
+  overflow: hidden;
+  cursor: pointer;
+}
+input[type=range]:before {
+  content: '0';
+  color: black;
+}
+input[type=range]:after {
+  content: '10000';
+  color: black;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 11.1px;
+  cursor: pointer;
+  box-shadow: 0.7px 0.7px 1.5px #000000, 0px 0px 0.7px #0d0d0d;
+  background: #47b6ff;
+  border-radius: 6.7px;
+  border: 0px solid #000001;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 3.5px 3.5px 7.4px #000000, 0px 0px 3.5px #0d0d0d;
+  border: 0.1px solid #000000;
+  height: 26px;
+  width: 17px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -11.95px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #61c0ff;
+}
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
